Whoops, fixed on mobile

--- a/src/containers/app/routes/static/homepage/process/_info.scss
+++ b/src/containers/app/routes/static/homepage/process/_info.scss
@@ -1,5 +1,7 @@
 .info {
-  height: $process-graph-info-height;
+  @include desktop-up {
+    height: $process-graph-info-height;
+  }
   h5 {
     color: $white;
     margin-top: 0px;
